--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
     "dev": "expo start",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "axios": "^1.4.0",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
@@ -25,13 +25,14 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "^13.2.2",
+    "react-native-webview": "11.26.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@types/react": "~18.0.27",
+    "@types/react-native": "^0.72.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   },
